# routes/api.php
@@ -10,6 +10,8 @@ use App\Http\Controllers\CollectDataController;
 
 Route::post('/send_collect_data', [CollectDataController::class, 'SendCollectData']);
 Route::get('/get_collect_data', [CollectDataController::class, 'GetAllCollectData']);
+Route::get('/get_today_collect_data', [CollectDataController::class, 'GetTodayCollectData']);
+Route::get('/get_latest_collect_data', [CollectDataController::class, 'GetlatestCollectData']);
 Route::get('/get_range_average_daily', [AverageDailyController::class, 'GetRangeAverageDaily']);
 Route::get('/get_all_average_daily', [AverageDailyController::class, 'GetAllAverageDaily']);
 Route::post('/send_message', [ArtificialIntellegenceController::class, 'SendMessage']);
